<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlantManager</string>
    <string name="main_message">This is the main screen</string>
    <string name="action_settings">Settings</string>
    <string name="details_button">Enter Details!</string>
    <string name="details">Name :</string>
    <string name="name_hint">Enter your name: </string>
    <string name="email_hint">Enter your email: </string>
    <string name="phone_hint">Enter your phone number: </string>
    <string name="input_submit_button">Submit.</string>
    <string name="create">Create new recording</string>
    <string name="edit">Continue previous recording</string>
    <string name="create_site">Please enter the name of the site.</string>
    <string name="create_comments">Optional comment here.</string>
    <string name="create_screen_button">Add Site</string>
    <string name="edit_page">This is the edit page!</string>
    <string name="spinner_prompt">Select a species</string>
    <string name="spinner_submit">Click here</string>
    <string name="radio_manual">Manually add a species.</string>
    <string name="species_hint">Enter name of species</string>
    <string name="photo_button">Take a photo!</string>

    <string-array name="species_array">
        <item>BSBI item 1</item>
        <item>BSBI item 2</item>
        <item>BSBI item 3</item>
        <item>BSBI item 4</item>
        <item>BSBI item 5</item>
        <item>BSBI item 6</item>
        <item>BSBI item 7</item>
        <item>BSBI item 8</item>
-*</string-array>
    <string-array name="options_array">
        <item>Select an option.</item>
        <item>Create new recording</item>
        <item>Continue previous recording</item>
    </string-array>

    <string name="title_activity_species">SpeciesActivity</string>
    <string name="title_activity_species_create">SpeciesCreateActivity</string>
    <string name="hello_world">Hello gays</string>

</resources>
