<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<EditText 
    android:id="@+id/SiteName"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/create_site"
    android:inputType="text"
    android:padding="42dp"
    
    />

<EditText 
    android:id="@+id/OptionalComment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/create_comments"
    android:inputType="textMultiLine"
    android:padding="42dp"
    
    />

<Button
    android:id="@+id/create_screen_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="33dp"
    android:text="@string/create_screen_button" />
</LinearLayout>
